--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,12 +29,12 @@ body {
   position: absolute;
   left: 15vw;
   bottom: 0px;
-  width: 248.9px;
-  height: 264.1px;
   margin: 0px 0px 10px 0px;
 }
 
-.App .doge-svg {
+.App .doge-svg-dark {
+  max-width: 238.9px;
+  max-height: 254.1px;
   display: none;
 }
 
@@ -829,5 +829,14 @@ body {
   text-align: center;
   -webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
+}
+
+@media (prefers-color-scheme: dark) {
+  .App .doge-svg {
+    display: none;
+  }
+  .App .doge-svg-dark {
+    display: block;
+  }
 }
 /*# sourceMappingURL=index.css.map */
