--- a/src/styles/__form.scss
+++ b/src/styles/__form.scss
@@ -66,7 +66,7 @@ form{
         color: rgba(216, 216, 216, 0.8);
     }
 
-    #switch{
+    .switch{
         visibility:hidden;
         width:0;
         height:0;
@@ -99,10 +99,10 @@ form{
         transition: left 0.3s ease-out;
     }
     
-    #switch:checked + .switch-label{
+    .switch:checked + .switch-label{
         background-color: #42d77d;
     }
-    #switch:checked + .switch-label:after{
+    .switch:checked + .switch-label:after{
         left: 21px;
     }
 
