--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -128,6 +128,7 @@ body {
     @import '__receive';
     @import '__transactions';
     @import '__settings';
+    @import '__dashboard';
     
 }
 
