Fixed bug which did not allow to load the dashboard without internet connection

--- a/src/styles/__dashboard.scss
+++ b/src/styles/__dashboard.scss
@@ -139,11 +139,10 @@
             background: rgb(120, 120, 120);
             margin: 5px 0px 10px 0px;
         }
+    }
 
-        .snackbar{
-            bottom: 25px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
+    .snackbar{
+        bottom: 20px;
+        z-index: 1;
     }
 }
